# ur5controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  manifest.xml  package.xml  test_ur5.py  ur5_openrave_tester.py  ur5_template.urdf  ur5controller.cpp  ur5controller_interface.cpp
meshes/ur5/visual/: forearm.dae  forearm.dae~  shoulder.dae  shoulder.dae~  upperarm.dae  wrist1.dae  wrist1.dae~  wrist2.dae
pythonsrc/ur5_robot/: __init__.py  ur5_factory.py  ur5_robot.py
scripts/: control_ur5.py  simple_ur5.py  test_env.xml  test_ur5.py
src/: robotiqcontroller.cpp  ur5controller.cpp  ur5controller_interface.cpp
ur5_description/: ur5.srdf  ur5.urdf
ur5_description/arm/meshes/visual/: base.dae  computer_box.stl
ur5_description/ridgeback/: arm_stand.stl  base_computer_box.stl
ur5_description/robotiq_two_finger_gripper/meshes/visual/: coupler.dae  follower.dae  pad.dae  spring_link.dae
ur5_description/srdf/: clearpath_ridgeback__ur5.srdf  clearpath_ridgeback__ur5__robotiq_three_finger_gripper.srdf
ur5_description/urdf/: clearpath_ridgeback__ur5.urdf  clearpath_ridgeback__ur5__robotiq_three_finger_gripper.urdf  clearpath_ridgeback__ur5__robotiq_two_finger_gripper.urdf  clearpath_ridgeback__ur5__robotiq_two_finger_gripper__robotiq_fts150.urdf
ur5_model/: README.md  ur5.srdf  ur5_openrave_tester.py  ur5_template.urdf  urdf_file_generator.py
ur5_model/arm/meshes/visual/: wrist3.dae
ur5_model/gripper/meshes/visual/: base.dae
ur5_model/meshes/ur5/visual/: base.dae~  upperarm.dae~  wrist2.dae~  wrist3.dae~
